test/negative/207_add_int_string.fx
// expect: __add__
val a = 1 + "x"
println(a)
