test/negative/207_add_int_string.err
207_add_int_string.fx:2:11: error: the appropriate match for '__add__' of type '((int, string) -> <unknown>)' is not found.
Candidates:
 __add__(string, string) -> string @ Builtins.fx:L:C -- argument 1 of type 'int' does not match 'string',
 __add__(string, char) -> string @ Builtins.fx:L:C -- argument 1 of type 'int' does not match 'string',
 __add__(char, string) -> string @ Builtins.fx:L:C -- argument 1 of type 'int' does not match 'char',
 __add__(char, char) -> string @ Builtins.fx:L:C -- argument 1 of type 'int' does not match 'char',
 __add__(list[T], list[T]) -> list[T] [generic: T] @ Builtins.fx:L:C -- argument 1 of type 'int' does not match 'list[T]',
 __add__(long, long) -> long @ Builtins.fx:L:C -- argument 1 of type 'int' does not match 'long',
 __add__((T1 ...), (T2 ...)) -> (T3 ...) [generic: T1, T2, T3, __var_tuple__] @ Builtins.fx:L:C -- argument 1 of type 'int' does not match '(T1 ...)',
 __add__(T1, Complex.complex@3[T2]) -> Complex.complex@3[T3] [generic: T1, T2, T3] @ Complex.fx:L:C -- argument 2 of type 'string' does not match 'Complex.complex@3[T2]',
 __add__(Complex.complex@3[T1], T2) -> Complex.complex@3[T3] [generic: T1, T2, T3] @ Complex.fx:L:C -- argument 1 of type 'int' does not match 'Complex.complex@3[T1]',
 __add__(Complex.complex@3[T1], Complex.complex@3[T2]) -> Complex.complex@3[T3] [generic: T1, T2, T3] @ Complex.fx:L:C -- argument 1 of type 'int' does not match 'Complex.complex@3[T1]',
 __add__(Ta [+], Tb [+]) -> Tr [+] [generic: Tr, Ta, Tb, __var_array__] @ Array.fx:L:C -- argument 1 of type 'int' does not match 'Ta [+]'

 2 | val a = 1 + "x"
   |           ^

1 errors occured during type checking.
